# slot-game-cpp

./: .gitignore  CMakeLists.txt  CustomActionCountSpins.cpp  CustomActionCountSpins.h  Game.h  GameConfig.h  LICENSE  README.md  analyzer.cpp  main.cpp
game_alis_pirate_plunder/: CustomActionCountSpins.cpp  CustomActionCountSpins.h  Game.h  GameConfig.h
include/: Command.h  Config.h  DefaultActionCalculateWins.h  DefaultActionSpin.h  GainResult.h  GainsCalculator.h  Gameplay.h  GameplayAction.h  LinesGainsCalculator.h  Matrix.h  Spinner.h  Utils.h
slot_game_template/include/: Command.h  Config.h  DefaultActionCalculateWins.h  DefaultActionSpin.h  GainResult.h  GainsCalculator.h  Gameplay.h  GameplayAction.h  LinesGainsCalculator.h  Matrix.h  Spinner.h  Utils.h
slot_game_template/src/: DefaultActionCalculateWins.cpp  DefaultActionSpin.cpp  Gameplay.cpp  LinesGainsCalculator.cpp  Spinner.cpp
src/: DefaultActionCalculateWins.cpp  DefaultActionSpin.cpp  Gameplay.cpp  LinesGainsCalculator.cpp  Spinner.cpp
